// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCheckableCard is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--hasBorder ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row ouiCheckableCard testClass1 testClass2"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiPanel--isClickable ouiSplitPanel__inner"
  >
    <div
      aria-label="aria-label"
      class="ouiRadio ouiRadio--noLabel"
      data-test-subj="test subject string"
    >
      <input
        class="ouiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="ouiRadio__circle"
      />
    </div>
  </div>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  >
    <label
      class="ouiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`OuiCheckableCard renders a checkbox when specified 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--hasBorder ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row ouiCheckableCard testClass1 testClass2"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiPanel--isClickable ouiSplitPanel__inner"
  >
    <div
      class="ouiCheckbox ouiCheckbox--noLabel"
    >
      <input
        aria-label="aria-label"
        class="ouiCheckbox__input"
        data-test-subj="test subject string"
        id="id"
        type="checkbox"
      />
      <div
        class="ouiCheckbox__square"
      />
    </div>
  </div>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  >
    <label
      class="ouiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`OuiCheckableCard renders children 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--hasBorder ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row ouiCheckableCard"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiPanel--isClickable ouiSplitPanel__inner"
  >
    <div
      class="ouiRadio ouiRadio--noLabel"
    >
      <input
        class="ouiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="ouiRadio__circle"
      />
    </div>
  </div>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  >
    <label
      aria-describedby="id-details"
      class="ouiCheckableCard__label"
      for="id"
    >
      Label
    </label>
    <div
      class="ouiCheckableCard__children"
      id="id-details"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`OuiCheckableCard renders disabled 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--hasBorder ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row ouiCheckableCard ouiCheckableCard-isDisabled"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiSplitPanel__inner"
  >
    <div
      class="ouiRadio ouiRadio--noLabel"
    >
      <input
        class="ouiRadio__input"
        disabled=""
        id="id"
        type="radio"
      />
      <div
        class="ouiRadio__circle"
      />
    </div>
  </div>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  >
    <label
      class="ouiCheckableCard__label ouiCheckableCard__label-isDisabled"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`OuiCheckableCard renders panel props 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiSplitPanel ouiSplitPanel--row ouiCheckableCard"
>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPanel--flexGrowZero ouiPanel--isClickable ouiSplitPanel__inner"
  >
    <div
      class="ouiRadio ouiRadio--noLabel"
    >
      <input
        class="ouiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="ouiRadio__circle"
      />
    </div>
  </div>
  <div
    class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--transparent ouiPanel--noShadow ouiPanel--noBorder ouiSplitPanel__inner"
  >
    <label
      class="ouiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;
